2007-01-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-theme-details.c (gtk_theme_update_remove_button): removed
	double gnome_vfs_file_info_unref/g_free calls.

2007-01-07  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (gtk_theme_update_remove_button): Applied patch
	from bug 326337 (leaks in the theme manager)

2007-01-11  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (gnome_theme_details_init): Applied theme
	manager part of the patch from bug 382730 (fix build with c89 compilers)

2007-01-11  Thomas Wood  <thos@gnome.org>

       * theme-properties.glade: Set minimum size request on the treeview
       rather than the entire window (fixes bug 393236).

2007-01-05  Christian Persch <chpe@gnome.org>

	Fixes #393117

	* gnome-theme-manager.c (main): get a reference to the GnomeProgram
	and free it when appropriate. Fixes leak.

	* gnome-theme-details.c (gtk_theme_update_remove_button): fixed leaks.

2007-01-03  Thomas Wood  <thos@gnome.org>

	* theme-properties.glade: Fix some HIG issues with strings

2006-12-18  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c:
	* theme-properties.glade:

	- HIG fixes to the color scheme tab, from suggestions in Bug 382517
	- Rename "Theme Details" button to "Customize"

2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-manager.c: (meta_theme_selection_changed):
	Plug a few leaks. Bug #376949.

2006-12-03  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (theme_properties_free),
	(file_theme_type), (missing_utility_message_dialog),
	(extract_files_error_dialog), (transfer_done_targz_idle_cb),
	(transfer_done_tarbz2_idle_cb), (transfer_done_cb),
	(gnome_theme_install_from_uri), (gnome_theme_installer_run):

	- Cleanup some of the install code
	- Implement bug 325300 - Theme manager should be able to handle archives
	  with icon, gtk+ and metacity themes
	- Implement bug 326103 - Allow installing a theme from a directory

2006-11-27  Thomas Wood  <thos@gnome.org>
