@@ -1,3 +1,10 @@
+2007-01-07  Thomas Wood  <thos@gnome.org>
+
+	Based on patch by: Gabor Kelemen <kelemeng@gnome.hu>
+
+	* gnome-theme-installer.c: (transfer_done_cb): Fixes bug 360449 (Avoid
+	markup in translatable messages)
+
 2007-01-07  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-theme-details.c (gtk_theme_update_remove_button): removed
